--- a/_posts/2018-06-17-refresh.markdown
+++ b/_posts/2018-06-17-refresh.markdown
@@ -9,6 +9,7 @@ categories:
 description: A fresh start
 image: /assets/images/surfacebook.jpg
 image-sm: /assets/images/surfacebook_small.jpg
+type: blog
 author: nick
 ---
 
